objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by automation templates to confirm if the template can be executed or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Task</label>
        <referenceTo>Build_Task__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF(Deployment_Jobs_Count__c&gt;0,
Count_Completed__c /  Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Completed__c</fullName>
        <label># Completed</label>
        <summarizedField>Step__c.Count_Completed__c</summarizedField>
        <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>When this need to be deployed</inlineHelpText>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <formula>IF(Deployment_Jobs_Count__c &gt; 0,
SUM_Deployed__c / Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deployment_Completed_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated when the Deployment Completed email has been sent to prevent subsequent notifications until this marker has been reset.</description>
        <label>Deployment Completed email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Jobs_Count__c</fullName>
        <label>Deployment Jobs Count</label>
        <summarizedField>Step__c.Org_Count__c</summarizedField>
        <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_Last_Step__c</fullName>
        <label>Deployment Last Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Source_Type__c</fullName>
        <label>Deployment Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_command_sent__c</fullName>
        <label>Deployment command sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Context__c</fullName>
        <label>Execution Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment</fullName>
                    <default>true</default>
                    <label>Deployment</label>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Status__c</fullName>
        <formula>CASE( Status__c, &quot;Completed Successfully&quot;, &quot;/resource/&quot; + IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-check.png&quot;,
&quot;In progress&quot;, &quot;/img/loading.gif&quot;,
&quot;Completed with Errors&quot;, &quot;/resource/&quot; + IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-cross.png&quot;,
&quot;/resource/&quot; + IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-paused.png&quot;)</formula>
        <label>Flag Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Deployments (From Org)</relationshipLabel>
        <relationshipName>Deployments_From_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Compliance_Scan_Date__c</fullName>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to decide if there is a pending manual item on deployment.</description>
        <inlineHelpText>This field is auto populated when a manual task is pending on deployment.</inlineHelpText>
        <label>Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>Step__c.SUM_Deployed__c</summarizedField>
        <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deploy now</fullName>
                </value>
                <value>
                    <fullName>Deploy later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Deployment_Complete_email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When the deployment completes an email will be sent to the owner of the deployment informing them of the status. Uncheck this checkbox to not receive such an email.</inlineHelpText>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_260</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Server_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Environment__c</fullName>
        <formula>From_Org__r.Environment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
                <value>
                    <fullName>Merge Conflict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The automation template that defined the steps of this deployment.</inlineHelpText>
        <label>Template</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Template Execution</relationshipLabel>
        <relationshipName>Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Deployed__c</columns>
        <columns>Completed__c</columns>
        <columns>From_Org__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <recordTypes>
        <fullName>Advanced_multi_step</fullName>
        <active>true</active>
        <description>Create multiple types of deployment steps. (Technical knowledge needed)</description>
        <label>Advanced (multi-step)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Automation_Template</fullName>
        <active>true</active>
        <description>Group of steps to be executed in the future.</description>
        <label>Automation Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Deployment</fullName>
        <active>true</active>
        <description>Select a Data Template to be deployed in a point and click process.</description>
        <label>Data Deployment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Metadata_Deployment</fullName>
        <active>true</active>
        <description>Select the metadata manually to be deployed in a point and click process.</description>
        <label>Metadata Deployment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>